New: drawing vehicle works.

--- a/dox/html/a00002.html
+++ b/dox/html/a00002.html
@@ -85,7 +85,7 @@ Ten wykres pokazuje, które pliki bezpośrednio lub pośrednio załączają ten 
 <area shape="rect" href="a00005.html" title=" " alt="" coords="196,109,363,165"/>
 <area shape="rect" href="a00014.html" title=" " alt="" coords="256,317,423,373"/>
 <area shape="rect" href="a00020.html" title=" " alt="" coords="439,109,605,165"/>
-<area shape="rect" href="a00008.html" title=" " alt="" coords="5,213,172,269"/>
+<area shape="rect" href="a00008.html" title="Definicja klasy MainWindow." alt="" coords="5,213,172,269"/>
 <area shape="rect" href="a00017.html" title=" " alt="" coords="196,213,363,269"/>
 <area shape="rect" href="a00011.html" title=" " alt="" coords="5,317,172,373"/>
 </map>
