--- a/dox/html/a00005.html
+++ b/dox/html/a00005.html
@@ -89,7 +89,7 @@ Ten wykres pokazuje, które pliki bezpośrednio lub pośrednio załączają ten 
 <div class="center"><img src="a00007.png" border="0" usemap="#a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2inc_2chartwindow_8hppdep" alt=""/></div>
 <map name="a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2inc_2chartwindow_8hppdep" id="a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2inc_2chartwindow_8hppdep">
 <area shape="rect" title=" " alt="" coords="195,5,361,61"/>
-<area shape="rect" href="a00008.html" title=" " alt="" coords="100,109,267,165"/>
+<area shape="rect" href="a00008.html" title="Definicja klasy MainWindow." alt="" coords="100,109,267,165"/>
 <area shape="rect" href="a00017.html" title=" " alt="" coords="291,109,457,165"/>
 <area shape="rect" href="a00011.html" title=" " alt="" coords="5,213,172,269"/>
 <area shape="rect" href="a00014.html" title=" " alt="" coords="196,213,363,269"/>
