--- a/dox/html/a00014.html
+++ b/dox/html/a00014.html
@@ -71,7 +71,7 @@ Wykres zależności załączania dla mainwindow.cpp:</div>
 <div class="center"><img src="a00015.png" border="0" usemap="#a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2src_2mainwindow_8cpp" alt=""/></div>
 <map name="a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2src_2mainwindow_8cpp" id="a_2home_2maciej_2_projects_2_serial_sim_2serial-sim_2src_2mainwindow_8cpp">
 <area shape="rect" title=" " alt="" coords="940,5,1107,61"/>
-<area shape="rect" href="a00008.html" title=" " alt="" coords="471,109,603,136"/>
+<area shape="rect" href="a00008.html" title="Definicja klasy MainWindow." alt="" coords="471,109,603,136"/>
 <area shape="rect" href="a00002.html" title=" " alt="" coords="1007,259,1090,285"/>
 <area shape="rect" title=" " alt="" coords="1061,109,1196,136"/>
 <area shape="rect" title=" " alt="" coords="5,184,121,211"/>
