--- a/dox/html/a00031.html
+++ b/dox/html/a00031.html
@@ -233,7 +233,7 @@ Oto graf wywoływań tej funkcji:</div>
 <div class="center"><img src="a00031_a1bc0397efc2f545b9c71da4047c7804c_icgraph.png" border="0" usemap="#aa00031_a1bc0397efc2f545b9c71da4047c7804c_icgraph" alt=""/></div>
 <map name="aa00031_a1bc0397efc2f545b9c71da4047c7804c_icgraph" id="aa00031_a1bc0397efc2f545b9c71da4047c7804c_icgraph">
 <area shape="rect" title=" " alt="" coords="264,13,441,39"/>
-<area shape="rect" href="a00035.html#a9fdc27ee9a4d5f797ff6086107230f9c" title=" " alt="" coords="5,5,216,47"/>
+<area shape="rect" href="a00035.html#a9fdc27ee9a4d5f797ff6086107230f9c" title="Metoda otwierająca okno zawierające wykresy odczytywanych wartości." alt="" coords="5,5,216,47"/>
 </map>
 </div>
 
