--- a/dox/html/inherits.html
+++ b/dox/html/inherits.html
@@ -80,7 +80,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#a_q_main_window" alt=""/>
 <map name="a_q_main_window" id="a_q_main_window">
 <area shape="rect" title=" " alt="" coords="5,5,121,32"/>
-<area shape="rect" href="a00035.html" title=" " alt="" coords="169,5,276,32"/>
+<area shape="rect" href="a00035.html" title="Definicja klasy MainWindow." alt="" coords="169,5,276,32"/>
 </map>
 </td></tr>
 </table>
